# code_projects

./: .gitignore  README.md
butterProblem/: README.md  butterProblem.nb
drag/: CMakeLists.txt  README.md  main  main.cpp
n_body/: CMakeLists.txt  README.md  main.cpp  plot.py  run.sh
n_body/data/: naive_3_ee.hdf5  naive_3_em.hdf5  naive_3_vv.hdf5
n_body/include/: n_body_solver.hpp  naive_sol.hpp  ode_int_sol.hpp  parameters_simulation.hpp  perform_simulation.hpp
n_body/src/: CMakeLists.txt  integrate.cpp  integrate.hpp  n_body_solver.cpp  n_body_solver.hpp  naive_sol.cpp  naive_sol.hpp  ode_int_sol.cpp  ode_int_sol.hpp  parameters_simulation.hpp  stelar_object.hpp
penna/: CMakeLists.txt  README.md  main.cpp  makefile  plot.py  run.sh
penna/pypenna/: data.txt  main.py
penna/pypenna/src/: animal.py  fishing_pop.py  genome.py  population.py
penna/src/: CMakeLists.txt  animal.cpp  animal.hpp  fishing_pop.cpp  fishing_pop.hpp  genome.cpp  genome.hpp  makefile  penna_vector.hpp  population.cpp  population.hpp
penna/test/: CMakeLists.txt  copy_ctor.cpp  genome_default_ctor.cpp  makefile
