CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(n_body_problem)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS "-march=native -O3")

FIND_PACKAGE(HDF5 REQUIRED COMPONENTS C CXX)
INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(src)

LINK_DIRECTORIES(src)

ADD_SUBDIRECTORY(src)
ADD_EXECUTABLE(main main.cpp)

TARGET_LINK_LIBRARIES(main naive_sol ${HDF5_HL_LIBRARIES} ${HDF5_CXX_LIBRARIES} ${HDF5_LIBRARIES})